swift_browser_ui_frontend/src/assets/main.css
@charset "utf-8";
@import url('@cscfi/csc-ui/css/theme.css');

/* CSS file for integrating CSC brand colors */

:root {
  --csc-blue: #025b96;
  --csc-dark: #2E3438;
  --csc-grey: #595959;
  --csc-primary-light: #c2dbdf;
  --csc-primary-lighter: #d8e8ea;
  --csc-primary-lightest: #f2f7f8;
  --csc-footer-grey: #dfe1e3;
  --csc-medium-grey: #757575;
  --body-font-size: 16px;
  --csc-font-family: 'museo-sans', sans-serif;
}

html, body {
  height: 100vh;
}

body {
  overflow-y: auto;
}

html,
body,
p,
ol,
ul,
li,
hr,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: 100%;
  font-weight: normal;
}

ul {
  list-style: none;
}

button,
input,
select,
textarea {
  margin: 0;
}

* {
  &,
  &::before,
  &::after {
    box-sizing: inherit;
  }
}

img {
  height: auto;
  max-width: 100%;
}

.title {
  margin-bottom: 1.5rem;
  word-break: break-word;
  font-weight: 600;
  line-height: 1.125;
  font-size: 2rem;
}

.is-1 {
  font-size: 3rem;
}
.is-2 {
  font-size: 2.5rem;
}
.is-3 {
  font-size: 2rem;
}
.is-4 {
  font-size: 1.5rem;
}
.is-5 {
  font-size: 1.25rem;
}
.is-6 {
  font-size: 1rem;
}

* {
  font-family: var(--csc-font-family);
}

.hl-1 {
  margin: 0 0.08rem;
  background-color: #006778 !important;
  color: #f5f5f5 !important;
}

a {
  color: var(--c-info-700);
  cursor: pointer;
  text-decoration: none;
}

a:hover {
  color: var(--c-info-700);
}

.pr-3 {
  padding-right: 0.75rem !important;
}

.pr-4 {
  padding-right: 1rem !important;
}

.has-text-weight-semibold {
  font-weight: 600 !important;
}

html {
  box-sizing: border-box;
  background-color: white;
  font-size: var(--body-font-size);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  min-width: 300px;
  overflow-x: hidden;
  overflow-y: auto;
  text-rendering: optimizeLegibility;
  text-size-adjust: 100%;
}

article,
footer {
  display: block;
}

.content ul {
  list-style: disc outside;
  margin-left: 2em;
  margin-top: 1em;
}

.content p {
  margin-bottom: 1em;
}

.content-wrapper {
  margin: 0;
  padding: 0;
  padding-bottom: 3rem;
  display: flex;
  flex-direction: column;
}

.contents {
  flex: 1 0 auto;
}

.container-box {
  width: 90%;
  margin-left: 5%;
  margin-right: 5%;
}

.navbar .container .navbar-brand .navbar-item img {
  max-height: 2.5rem;
}

.menu-active {
  font-weight: 600 !important;
  font-size: 14px;
}

.menu-icon {
  font-size: 1.5rem;
}

.menu-active,
.menu-icon {
  color: var(--c-primary-600);
}

.menu-icon {
  font-size: 1.5rem;
}

.menu-active, .menu-icon {
  color: var(--c-primary-600);
}

.footer {
  margin: 15px 0;
  padding: 0;
}

#optionsbar {
  display: block;
  padding: 1.5rem 0;
}

.search {
  flex: 0.4;
}

.display-options-menu {
  display: flex;
  align-items: center;
  & .mdi {
    padding-right: .5rem;
    font-size: 18px;
  }
}

.taginput-label {
  font-weight: bold;
  margin-bottom: -2rem;
}

#container-error-toasts {
  margin-top: 50vh;
}

.button-focus {
  outline: 2px var(--c-primary-600) solid;
  outline-offset: 2px;
  border-radius: 4px;
}

/* Replace deprecated csc-ui components with divs */

div.main {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  justify-content: space-between;
  background-color: var(--csc-primary-lighter);
}

div.flex {
  display: block;
  flex: 1;
}

div.container {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 1200px;
}

div.padding {
  padding: 24px;
}

c-menu {
  --c-menu-text-color: var(--c-primary-600);
}

c-data-table {
  --c-data-table-background-color-hover: var(--csc-primary-lightest);
  --c-data-table-highlighted-column-background-color: var(--csc-primary-lightest);
}

.modal-content-wrapper {
  overflow-y: scroll;
  scrollbar-width: 0.5rem;
  padding-right: 0.5rem;

  &::-webkit-scrollbar {
    width: 0.5rem;
  }
  &::-webkit-scrollbar-thumb {
    background: var(--c-tertiary-500);
    border-radius: 10px;
    &:hover {
      background: var(--c-tertiary-700);
    }
  }
}

.modal-card {
  padding: 1.5rem;
  max-height: 75vh;
}

.modal-card-content {
  color: var(--csc-dark);
}

.no-padding-card {
  --c-card-gap: 0;
}

